@@ -16,31 +16,33 @@ public class HabrCareerParse implements Parse {
     private static final String SOURCE_LINK = "https://career.habr.com";
     private static final String PREFIX = "/vacancies?page=";
     private static final String SUFFIX = "&q=Java%20developer&type=all";
+    private static final int COUNT_PAGE_OF_PARSING = 5;
 
     @Override
     public List<Post> fetch() {
         var result = new ArrayList<Post>();
         try {
-            int pageNumber = 1;
-            String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
-            var connection = Jsoup.connect(fullLink);
-            var document = connection.get();
-            var rows = document.select(".vacancy-card__inner");
-            rows.forEach(row -> {
-                var titleElement = row.select(".vacancy-card__title").first();
-                var linkElement = titleElement.child(0);
-                String vacancyName = titleElement.text();
-                String link = String.format("%s%s", SOURCE_LINK,
-                        linkElement.attr("href"));
-                Element createdDateElement = row.select(".vacancy-card__date time").first();
-                String datetimeAttr = createdDateElement.attr("datetime");
-                LocalDateTime createdDate = OffsetDateTime.parse(datetimeAttr).toLocalDateTime();
-                var post = new Post();
-                post.setName(vacancyName);
-                post.setLink(link);
-                post.setCreated(createdDate);
-                result.add(post);
-            });
+            for (int pageNumber = 1; pageNumber <= COUNT_PAGE_OF_PARSING; pageNumber++) {
+                String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
+                var connection = Jsoup.connect(fullLink);
+                var document = connection.get();
+                var rows = document.select(".vacancy-card__inner");
+                rows.forEach(row -> {
+                    var titleElement = row.select(".vacancy-card__title").first();
+                    var linkElement = titleElement.child(0);
+                    String vacancyName = titleElement.text();
+                    String link = String.format("%s%s", SOURCE_LINK,
+                            linkElement.attr("href"));
+                    Element createdDateElement = row.select(".vacancy-card__date time").first();
+                    String datetimeAttr = createdDateElement.attr("datetime");
+                    LocalDateTime createdDate = OffsetDateTime.parse(datetimeAttr).toLocalDateTime();
+                    var post = new Post();
+                    post.setName(vacancyName);
+                    post.setLink(link);
+                    post.setCreated(createdDate);
+                    result.add(post);
+                });
+            }
         } catch (IOException e) {
             log.error("When load page", e);
         }
